# planner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  amity_brief.md  amity_claude_code_workflow.md  amity_coding_guidelines.md  amity_rust_guidelines.md  cluster_3_meals.md  cluster_4_children.md  cluster_7_integrations.md  cluster_8_privacy_governance.md  rust-toolchain.toml
.github/workflows/: ci.yml
apps/hub-tauri/: index.html  package.json  vite.config.ts
apps/hub-tauri/src/: App.tsx  main.tsx  style.css
apps/hub-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/hub-tauri/src-tauri/src/: lib.rs  main.rs
crates/amity-core/: Cargo.toml
crates/amity-core/src/: ids.rs  inbox.rs  lib.rs
crates/amity-service/: Cargo.toml
crates/amity-service/src/: config.rs  lib.rs  main.rs
crates/amity-service/src/api/: inbox.rs  mod.rs
crates/amity-service/tests/: inbox_api.rs
crates/amity-storage/: Cargo.toml
crates/amity-storage/migrations/: 0001_initial.sql
crates/amity-storage/src/: connection.rs  inbox.rs  lib.rs
crates/amity-storage/tests/: inbox_repository.rs
docs/: amity_claude_project.md  amity_licensing.md  amity_philosophy.md  task_1_scaffolding_and_inbox.md
docs/adrs/: 0001-initial-architecture.md
oldfiles/: Family_Organizer_Product_Brief_and_MVP.md  cluster_2_chores.md  cluster_5_notifications.md  cluster_6_voice_hub.md  section_21D_answers.md  section_3_data_model.md
scripts/: comment-density.sh
